--- a/WorldStore/WorldStore.csproj
+++ b/WorldStore/WorldStore.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>earth.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -416,6 +419,7 @@
     <None Include="Resources\321.png" />
     <None Include="Resources\32_11.png" />
     <None Include="Resources\deletebutton.jpg" />
+    <Content Include="earth.ico" />
     <Content Include="Images\timg.jpg" />
     <Content Include="Resources\confirm.jpg" />
     <Content Include="Resources\XiangYun.gif" />
